jsp-servlet-jdbc-todoList: basic pages

--- a/jsp-servlet-jdbc-todoList/src/main/webapp/index.html
+++ b/jsp-servlet-jdbc-todoList/src/main/webapp/index.html
@@ -1,5 +1,67 @@
+<!DOCTYPE html>
 <html>
+	<meta charset="utf-8">
+	<head>
+		<title>To do list</title>
+	</head>
 	<body>
-		<h2>Hello To do list!</h2>
+		<header>
+			<h2>Welcome, this is a to do list!</h2>
+		</header>
+		<!--  <div>
+				menu aqui
+			</div> -->
+		
+		<div>
+		
+			<div>
+				<h3>Titulo Card1</h3>
+				<p>
+					Life is too short to be alone, too precious. Share it with a friend. 
+					All you have to do is let your imagination go wild. We must be quiet, soft and gentle.
+				</p>
+				<p>
+					fazer até: 00-00-000 00:00
+				</p>
+			</div>
+		
+			<div>
+				<h3>Titulo Card2</h3>
+				<p>
+					Life is too short to be alone, too precious. Share it with a friend. 
+					All you have to do is let your imagination go wild. We must be quiet, soft and gentle.
+				</p>
+				<p>
+					fazer até: 00-00-000 00:00
+				</p>
+			</div>
+			
+			
+		
+			<div>
+				<h3>Titulo Card3</h3>
+				<p>
+					Life is too short to be alone, too precious. Share it with a friend. 
+					All you have to do is let your imagination go wild. We must be quiet, soft and gentle.
+				</p>
+				<p>
+					fazer até: 00-00-000 00:00
+				</p>
+			</div>
+			
+			
+		
+			<div>
+				<h3>Titulo Card4</h3>
+				<p>
+					Life is too short to be alone, too precious. Share it with a friend. 
+					All you have to do is let your imagination go wild. We must be quiet, soft and gentle.
+				</p>
+				<p>
+					fazer até: 00-00-000 00:00
+				</p>
+			</div>			
+			
+		</div>
 	</body>
 </html>
